# docs/swagger.json
@@ -1,12 +1,16 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "rango服务端接口文档，注意模块名称",
+        "title": "rango 服务接口 Swagger 文档",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:2020",
     "paths": {
         "/api/": {
             "get": {
-                "description": "do ping",
+                "description": "首页index入口，默认返回为一个index字符串",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,14 +18,47 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Api模块"
                 ],
-                "summary": "ping example",
+                "summary": "首页index",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/params/:id": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Api模块"
+                ],
+                "summary": "测试请求参数",
+                "parameters": [
+                    {
+                        "description": "name入参，测试入参",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.Params"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "响应的body体",
+                        "schema": {
+                            "type": "map"
                         }
                     }
                 }
@@ -37,7 +74,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Log模块"
                 ],
                 "summary": "日志处理",
                 "responses": {
@@ -49,6 +86,21 @@
                     }
                 }
             }
+        }
+    },
+    "definitions": {
+        "api.Params": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
